add new apis and ldap integration
